@@ -1964,11 +1964,48 @@ class CActiveRecordMetaData
 
 		foreach($model->relations() as $name=>$config)
 		{
-			if(isset($config[0],$config[1],$config[2]))  // relation class, AR class, FK
-				$this->relations[$name]=new $config[0]($name,$config[1],$config[2],array_slice($config,3));
-			else
-				throw new CDbException(Yii::t('yii','Active record "{class}" has an invalid configuration for relation "{relation}". It must specify the relation type, the related active record class and the foreign key.',
-					array('{class}'=>get_class($model),'{relation}'=>$name)));
+			$this->addRelation($name,$config);
 		}
+	}
+
+	/**
+	 * Adds a relation.
+	 *
+	 * $config is an array with three elements:
+	 * relation type, the related active record class and the foreign key.
+	 *
+	 * @throws CDbException
+	 * @param string $name Name of the relation.
+	 * @param array $config Relation parameters.
+     * @return void
+	 */
+	public function addRelation($name,$config)
+	{
+		if(isset($config[0],$config[1],$config[2]))  // relation class, AR class, FK
+			$this->relations[$name]=new $config[0]($name,$config[1],$config[2],array_slice($config,3));
+		else
+			throw new CDbException(Yii::t('yii','Active record "{class}" has an invalid configuration for relation "{relation}". It must specify the relation type, the related active record class and the foreign key.', array('{class}'=>get_class($model),'{relation}'=>$name)));
+	}
+
+	/**
+	 * Checks if there is a relation with specified name defined.
+	 *
+	 * @param string $name Name of the relation.
+	 * @return boolean
+	 */
+	public function hasRelation($name)
+	{
+		return isset($this->relations[$name]);
+	}
+
+	/**
+	 * Deletes a relation with specified name.
+	 *
+	 * @param string $name
+	 * @return void
+	 */
+	public function removeRelation($name)
+	{
+		unset($this->relations[$name]);
 	}
 }
