@@ -4,7 +4,10 @@
 
 Version 1.1.2 to be released
 ----------------------------
+- Bug #676, 891: merging criterias with parameters is impossible (Sam Dark)
 - Bug #1006: Setting CForm::attributes may cause exception (Qiang)
+- Bug: CDbCriteria::compare partialMatch is not working with "=" operator (Sam Dark)
+- Enh #943: dynamic AR relations (Sam Dark)
 - Enh: CCaptchaAction now supports unlimited tests by setting its testLimit to be 0 (Qiang)
 
 Version 1.1.1 March 14, 2010
